include RecipeIngredients in recipes

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th>Steps</th>
+      <!-- th>Steps</th -->
       <th>Difficulty</th>
       <th>Prep time</th>
       <th>Cook time</th>
@@ -18,7 +18,7 @@
     <% @recipes.each do |recipe| %>
       <tr>
         <td><%= recipe.name %></td>
-        <td><%= recipe.steps %></td>
+        <!-- td><%= recipe.steps %></td -->
         <td><%= recipe.difficulty %></td>
         <td><%= recipe.prep_time %></td>
         <td><%= recipe.cook_time %></td>
