--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -16,20 +16,23 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :steps %><br>
-    <%= f.text_area :steps %>
-  </div>
-  <div class="field">
     <%= f.label :difficulty %><br>
     <%= f.number_field :difficulty %>
   </div>
   <div class="field">
     <%= f.label :prep_time %><br>
     <%= f.time_select :prep_time %>
-  </div>
   <div class="field">
     <%= f.label :cook_time %><br>
     <%= f.time_select :cook_time %>
+  </div>
+  <div class="field">
+    <%= f.label :ingredients -%><br>
+    <%= select_tag(:ingredients, options_from_collection_for_select(Ingredient.all, :id, :name), :multiple => true) -%>
+  </div>
+  <div class="field">
+    <%= f.label :steps %><br>
+    <%= f.text_area :steps %>
   </div>
   <div class="actions">
     <%= f.submit %>
